# atk-chatbot

atk-chatbot/atk-chatbot-pipeline/: README.md  pyproject.toml
atk-chatbot/atk-chatbot-pipeline/atk_chatbot_pipeline/: pipeline.py  run.py
atk-chatbot/atk-chatbot-pipeline/config/: ingestion_config.yaml
atk-chatbot/atk-converters/: README.md  pyproject.toml
atk-chatbot/atk-converters/atk_converters/: converter_baseclass.py  directory_documents_extractor.py  gdriveloader.py  pipeline.py  run_pipeline.py  video_extractor.py  website_extractor.py
atk-chatbot/atk-converters/config/: ingestion_config.yaml
atk-chatbot/atk-embeddings/: README.md  pyproject.toml
atk-chatbot/atk-embeddings/atk_embeddings/: chunker.py  pipeline.py  run_pipeline.py
atk-chatbot/atk-vectordbs/: README.md  pyproject.toml
atk-chatbot/atk-vectordbs/atk_vectordbs/: milvus.py  vector_dbs.py
